<resources>
    <string name="app_name">Submission1Intermediate</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="story_name">Story Name</string>
    <string name="story_image">Story Image</string>
    <string name="story_description">Story Description</string>
</resources>